Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-472

mysql-test-run --valgrind main.ps_2myisam gives warning about not initialized memory

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.27, 5.3.7
    • 5.5.27, 5.3.8
    • None
    • OpenSuse, valgrind

    Description

      mysql-test-run --valgrind main.ps_2myisam

      returns in 5.5 (5.3 has an identical stack trace):

      ==21170== Thread 4:
      ==21170== Conditional jump or move depends on uninitialised value(s)
      ==21170==    at 0x8CBB12: pack_time (my_time.c:1456)
      ==21170==    by 0x802EED: get_datetime_value(THD*, Item***, Item**, Item*, bool*) (item_cmpfunc.cc:905)
      ==21170==    by 0x8030D5: Arg_comparator::compare_datetime() (item_cmpfunc.cc:956)
      ==21170==    by 0x8135B6: Arg_comparator::compare() (in /my/maria-5.5/sql/mysqld)
      ==21170==    by 0x805C87: Item_func_eq::val_int() (item_cmpfunc.cc:1858)
      ==21170==    by 0x7E0858: Item::val_bool() (item.cc:215)
      ==21170==    by 0x80F1BC: Item_cond_and::val_int() (item_cmpfunc.cc:4608)
      ==21170==    by 0x67EB74: evaluate_join_record(JOIN*, st_join_table*, int) (sql_select.cc:16200)
      ==21170==    by 0x67E7BC: sub_select(JOIN*, st_join_table*, bool) (sql_select.cc:16105)
      ==21170==    by 0x67E073: do_select(JOIN*, List<Item>*, TABLE*, Procedure*) (sql_select.cc:15775)

      Attachments

        Activity

          People

            serg Sergei Golubchik
            monty Michael Widenius
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.