MDEV-472 mysql-test-run --valgrind main.ps_2myisam gives warning about not initialized memory

Item::get_date() should return 1 unless the value is a valid date.